Added POST /users API and removed GET /user/<user_id>
